--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           github_user_name: GabrielRoani
           svg_out_path: dist/github-contribution-grid-snake.svg
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
